--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,15 @@ body {
   height: 100%;
   width: 100%;
 }
+
+html,
+body {
+  font-size: 8px;
+}
+
+@media screen and (orientation: landscape) {
+  html,
+  body {
+    font-size: 16px;
+  }
+}
